welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: identifier expected but '(' found.
    if (nums.(i)==9) {return true}
             ^